

0.0.8a0
=======

* Added CLI calls to power on/off runs, and corresponding methods
* Added an option to keep the asset zip files after import/update
* Added ssh.scp_file method for getting and putting files over SSH using paramiko and scp
* Added route53 util for creating public/private hosted zones and adding/deleting DNS records

0.0.7
=====

* Added the "cons3rt run" CLI command, and added options for snapshotting all hosts in a run, or restoring
 all hosts in a run from snapshots
* Updated the SSH generation methods to allow various key types, and added a method to ECDSA keys
* Added new methods of encryption/decryption for openssl smime
* Added Arcus site configurations, and removed old site configurations

0.0.1
=====

* Initial python3 port of pycons3rt and pycons3rtapi